whole style changed and projects updated by backend

--- a/backend/projects.json
+++ b/backend/projects.json
@@ -9,20 +9,59 @@
     "stargazers_count": 2,
     "forks_count": 0,
     "created_at": "2025-08-13T14:52:15Z",
-    "updated_at": "2025-10-07T17:32:10Z",
+    "updated_at": "2025-10-21T08:41:31Z",
     "topics": []
   },
   {
-    "id": 1067194922,
-    "name": "Game_friend",
+    "id": 1074633532,
+    "name": "Jupyter-Python_Numpy_Fundamentals",
+    "description": "This repository contains Jupyter Notebook files designed to learn the fundamentals of Python and the NumPy library. Each notebook focuses on step-by-step exercises covering topics such as data structures, loops, functions, arrays, and NumPy basics.",
+    "html_url": "https://github.com/VedatZeybek/Jupyter-Python_Numpy_Fundamentals",
+    "homepage": null,
+    "language": "Jupyter Notebook",
+    "stargazers_count": 0,
+    "forks_count": 0,
+    "created_at": "2025-10-12T07:07:43Z",
+    "updated_at": "2025-10-19T07:04:10Z",
+    "topics": []
+  },
+  {
+    "id": 1049145566,
+    "name": "VedatZeybek",
     "description": null,
-    "html_url": "https://github.com/VedatZeybek/Game_friend",
+    "html_url": "https://github.com/VedatZeybek/VedatZeybek",
+    "homepage": null,
+    "language": null,
+    "stargazers_count": 0,
+    "forks_count": 0,
+    "created_at": "2025-09-02T14:51:15Z",
+    "updated_at": "2025-10-15T20:37:15Z",
+    "topics": []
+  },
+  {
+    "id": 1076872469,
+    "name": "my_own_neural_networks",
+    "description": "Building neural networks completely from scratch using only NumPy. Still in processing (hala geliştirme aşamasında...)— experimenting, optimizing, and learning the fundamentals step by step.",
+    "html_url": "https://github.com/VedatZeybek/my_own_neural_networks",
+    "homepage": null,
+    "language": "Python",
+    "stargazers_count": 0,
+    "forks_count": 0,
+    "created_at": "2025-10-15T13:11:58Z",
+    "updated_at": "2025-10-15T20:27:14Z",
+    "topics": []
+  },
+  {
+    "id": 1065804492,
+    "name": "resume",
+    "description": null,
+    "html_url": "https://github.com/VedatZeybek/resume",
     "homepage": null,
     "language": "JavaScript",
     "stargazers_count": 0,
     "forks_count": 0,
-    "created_at": "2025-09-30T14:04:41Z",
-    "updated_at": "2025-10-03T10:43:34Z",
+    "created_at": "2025-09-28T13:15:14Z",
+    "updated_at": "2025-10-10T06:03:09Z",
     "topics": []
   },
   {
@@ -49,32 +88,6 @@
     "forks_count": 0,
     "created_at": "2025-07-03T15:10:26Z",
     "updated_at": "2025-10-01T09:03:31Z",
-    "topics": []
-  },
-  {
-    "id": 1065804492,
-    "name": "resume",
-    "description": null,
-    "html_url": "https://github.com/VedatZeybek/resume",
-    "homepage": null,
-    "language": "JavaScript",
-    "stargazers_count": 0,
-    "forks_count": 0,
-    "created_at": "2025-09-28T13:15:14Z",
-    "updated_at": "2025-09-30T07:19:56Z",
-    "topics": []
-  },
-  {
-    "id": 1049145566,
-    "name": "VedatZeybek",
-    "description": null,
-    "html_url": "https://github.com/VedatZeybek/VedatZeybek",
-    "homepage": null,
-    "language": null,
-    "stargazers_count": 0,
-    "forks_count": 0,
-    "created_at": "2025-09-02T14:51:15Z",
-    "updated_at": "2025-09-29T11:04:11Z",
     "topics": []
   },
   {
